[package]
name = "packet-play"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
version = "0.1.0"
description = """
CLI tool to replay .pcap and .pcapng files.
"""
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "3.1.12", features = ["derive"] }
rustyline = "9.1.2"
