[package]
name = "packet-play"
authors = ["Zeeger Lubsen <zeeger@lubsen.eu>"]
version = "0.4.0"
description = """
CLI tool to replay .pcap files (and .pcapng in the future). Assumes captured packets were recorded as UDP over IP/Ethernet.
"""
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
nom = "7.1.1"
indicatif = "0.16.2"
dialoguer = "0.10.1"
egui = "0.18.1"
eframe = "0.18.0"